unpackaged/main/default/objects/ET_Healthcard_Master__c/ET_Healthcard_Master__c.object-meta.xml
<CustomObject>
    <label>Healthcard Master</label>
    <nameField>
        <displayFormat>HCM-{0000}</displayFormat>
        <label>Healthcard Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Healthcard Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>