unpackaged/main/default/objects/ET_Healthcard_Master__c/fields/Emirates__c.field-meta.xml
<CustomField>
    <fullName>Emirates__c</fullName>
    <label>Emirate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abu dhabi</fullName>
            </value>
            <value>
                <fullName>Abu-Dhabi</fullName>
                <isActive>false</isActive>
                <label>Abu-Dhabi</label>
            </value>
            <value>
                <fullName>Ajman</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Fujairah</fullName>
            </value>
            <value>
                <fullName>Ras al Khaimah</fullName>
            </value>
            <value>
                <fullName>Sharjah</fullName>
            </value>
            <value>
                <fullName>Umm al Quwain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>