unpackaged/main/default/objects/ET_Healthcard_Master__c/fields/Manpower_Category__c.field-meta.xml
<CustomField>
    <fullName>Manpower_Category__c</fullName>
    <label>Manpower Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountant/Cashier</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Nanny</fullName>
            </value>
            <value>
                <fullName>Other Employee</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>School Driver</fullName>
            </value>
            <value>
                <fullName>Accountant</fullName>
                <isActive>false</isActive>
                <label>Accountant</label>
            </value>
            <value>
                <fullName>Co-ordinator</fullName>
                <isActive>false</isActive>
                <label>Co-ordinator</label>
            </value>
            <value>
                <fullName>Other Manpower</fullName>
                <isActive>false</isActive>
                <label>Other Manpower</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>