unpackaged/main/default/objects/ET_Healthcard_Master__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>Greater than</fullName>
                <isActive>false</isActive>
                <label>Greater than</label>
            </value>
            <value>
                <fullName>Greater than equal to</fullName>
                <isActive>false</isActive>
                <label>Greater than equal to</label>
            </value>
            <value>
                <fullName>Less than</fullName>
                <isActive>false</isActive>
                <label>Less than</label>
            </value>
            <value>
                <fullName>Less than equal to</fullName>
                <isActive>false</isActive>
                <label>Less than equal to</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>