unpackaged/main/default/objects/ET_Healthcard_Master__c/fields/Year_3__c.field-meta.xml
<CustomField>
    <fullName>Year_3__c</fullName>
    <label>Year 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>