unpackaged/main/default/objects/ET_Healthcard_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Emirates__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Manpower_Category__c</columns>
    <columns>Operator__c</columns>
    <columns>Salary__c</columns>
    <columns>Year_1__c</columns>
    <columns>Year_2__c</columns>
    <columns>Year_3__c</columns>
    <columns>Year_4__c</columns>
    <columns>Year_5__c</columns>
    <columns>Year_6__c</columns>
    <columns>Year_7__c</columns>
    <columns>Year_8__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>